--- a/css/style.css
+++ b/css/style.css
@@ -543,3 +543,378 @@ box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.1);
 /* ==============================
     impact end
 ================================= */
+/* ===============================================
+plan section start
+================================================= */
+
+.plan h3{
+  font-family: Open Sans;
+font-size: 48px;
+font-weight: 700;
+line-height: 65px;
+letter-spacing: 0px;
+text-align: center;
+margin-bottom: 64px;
+}
+
+.plan .box{
+  justify-content: space-between;
+}
+
+.plan .box .plan_item{
+  width: 32%;
+  border-radius: 20px;
+  text-align: center;
+  -webkit-box-shadow: 0px -1px 41px -26px rgba(0,0,0,0.97);
+  -moz-box-shadow: 0px -1px 41px -26px rgba(0,0,0,0.97);
+  box-shadow: 0px -1px 41px -26px rgba(0,0,0,0.97);
+  transition: .4s; 
+}
+
+.plan .box .plan_item img{
+  width: 100%;
+}
+
+.plan .box .plan_item:hover{
+  background: #6B62C5;
+}
+
+.plan .box .plan_item:hover h4{
+  color: #fff;
+}
+
+.plan .box .plan_item:hover h5{
+  color: #fff;
+}
+
+.plan .box .plan_item:hover p{
+  color: #fff;
+}
+
+.plan .box .plan_item h4{
+  font-family: Open Sans;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  color: #141135;
+  margin-bottom: 26px;
+  margin-top: 60px;
+}
+
+.plan .box .plan_item h5{
+  font-family: Nunito;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 50px;
+  color: #1BBF00;
+  margin-top: 20px;
+  margin-bottom: 12px;
+}
+
+.plan .box .plan_item p{
+  font-family: Paprika;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  color: #726E9E;
+  width: 252px;
+  margin: 0 auto;
+  padding-bottom: 59px;
+}
+
+/* ===============================================
+plan section end
+================================================= */
+/* ===============================================
+about section start
+================================================= */
+.about {
+  background-color: #F8F8FF;
+  position: relative;
+}
+
+.about .circle1 {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: #1BBF00;
+  position: absolute;
+  top: 495px;
+  right: 194px;
+  text-align: center;
+  color: #fff;
+  transition: .4s;
+}
+
+.about .circle1:hover{
+  background: rgba(27, 191, 0, .4);
+}
+
+.about .circle1 i{
+  line-height: 64px;
+}
+
+.about .circle2 {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: #1BBF00;
+  position: absolute;
+  top: 495px;
+  left: 194px;
+  text-align: center;
+  color: #fff;
+  transition: .4s;
+}
+
+.about .circle2:hover{
+  background: rgba(27, 191, 0, .4);
+}
+
+.about .circle2 i{
+  line-height: 64px;
+}
+
+.about .container{
+  padding: 100px 256px;
+}
+
+.about h3{
+font-family: Open Sans;
+font-size: 48px;
+font-weight: 700;
+line-height: 65px;
+letter-spacing: 0px;
+text-align: center;
+margin-bottom: 140px;
+}
+
+.about h4{
+  font-family: Open Sans;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 40px;
+  color: #221A2C;
+  margin-top: 48px;
+}
+
+.about h5{
+  font-family: Paprika;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  color: #221A2C;
+  padding-bottom: 56px;
+}
+
+.about .people {
+  text-align: center;
+  position: relative;
+}
+
+.about .people {
+  -webkit-box-shadow: 0px 0px 13px -4px rgba(0,0,0,0.48);
+  -moz-box-shadow: 0px 0px 13px -4px rgba(0,0,0,0.48);
+  box-shadow: 0px 0px 13px -4px rgba(0,0,0,0.48);
+  border-radius: 20px;
+  background: #fff;
+}
+
+.about .people picture {
+  position: absolute;
+  top: -88px;
+  left: 448px;
+}
+
+.about .people .box {
+  text-align: center;
+  position: absolute;
+  top: 111px;
+  left: 547px;
+}
+
+.about .people p{
+  font-family: Paprika;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 40px;
+  width: 800px;
+  margin: 0 auto;
+  padding-top: 168px;
+  color: #726E9E;
+}
+
+.about .people i{
+  color: #FF7628;
+}
+
+/* ===============================================
+about section end
+================================================= */
+
+/* ===============================================
+like section start
+================================================= */
+
+.like{
+  position: relative;
+}
+
+.like .out_pic{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.like .container{
+  padding: 100px 20px;
+}
+
+.like .all_item{
+  display: flex;
+  flex-direction: column;
+  row-gap: 60px;
+}
+
+.like h3{
+  font-family: Open Sans;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 65px;
+  color: #030314;
+  margin-bottom: 64px;
+}
+
+.like .item .left{
+  width: 40%;
+}
+
+.like .item .right{
+  width: 60%;
+}
+
+.like .item .right p{
+  font-family: Quicksand;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 25px;
+  color: #726E9E;
+  margin-bottom: 16px;
+}
+
+.like .item .right h3{
+  font-family: Open Sans;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 55px;
+  color: #141135;
+  margin-bottom: 16px;
+}
+
+.like .item .right a{
+  font-family: Open Sans;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #141135;
+}
+
+.like .item .right span{
+  margin-right: 35px;
+}
+
+.like .item .right .news{
+  color: #1BBF00;
+}
+
+/* ===============================================
+like section end
+================================================= */
+/* ===========================================
+footer start
+=============================================*/
+
+.footer {
+  background: #48409C;
+}
+
+.footer .policy{
+padding-bottom: 35px;
+}
+
+.footer .box{
+  padding-top: 140px;
+}
+
+.footer .box .left{
+  width: 50%;
+}
+.footer .box .left img{
+  margin-bottom: 44px;
+}
+
+.footer .box .left p{
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  width: 449px;
+  margin-bottom: 189px;
+  color: #fff;
+}
+
+.footer  .right{
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer .right ul h3{
+  font-family: Open Sans;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 34px;
+  margin-bottom: 48px;
+  color: #fff;
+}
+
+.footer .right ul li{
+  font-family: Nunito;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+.footer .right p{
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  margin: 0 15px;
+  color: #fff;
+}
+
+.footer .policy{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.footer .policy .condition{
+  display: flex;
+}
+
+.footer .policy .condition p{
+  margin: 0 30px;
+  color: #fff;
+}
+
+.footer .policy .policy_right{
+  color: #fff;
+}
+
+/* ===========================================
+footer end
+=============================================*/
